기능:메인화면 레벨업 구현

--- a/src/main/webapp/src/index.css
+++ b/src/main/webapp/src/index.css
@@ -2,7 +2,14 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+
+  font-family: "Noto Sans KR", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
 }
