--- a/src/main/webapp/src/components/devlog/hexagon.module.css
+++ b/src/main/webapp/src/components/devlog/hexagon.module.css
@@ -24,6 +24,9 @@
 .opacityAnimation3 {
   animation: opacityPulse 1s ease-in-out 0.75s infinite;
 }
+.opacityAnimationDevlogList {
+  animation: opacityPulse 2.5s ease-in-out 0s infinite;
+}
 
 /* 육각형을 만들기 위한 css */
 .hexagon {
