--- a/src/main/webapp/src/components/skill/card/card.module.css
+++ b/src/main/webapp/src/components/skill/card/card.module.css
@@ -3,16 +3,15 @@
     transform: translateX(0px) rotateY(0deg);
   }
   to {
-    width: 440px;
-    height: 620px;
-    transform: translateX(-240px) translateY(-155px) rotateY(540deg);
+    width: 330px;
+    height: 466px;
+    transform: translateX(-280px) translateY(-155px) rotateY(540deg);
   }
 }
 
 .container {
   transition: all 0.2s;
   position: relative;
-  cursor: pointer;
   perspective: 350px;
 }
 
@@ -31,6 +30,11 @@
   background-position: 100%;
   transition: all 0.2s;
   z-index: 50;
+}
+
+.overlayActive {
+  animation: containerGrow 0.5s forwards;
+  position: absolute;
 }
 
 .card {
@@ -60,5 +64,5 @@
 }
 
 .CardContentBG {
-  background-image: url("../../../../public/image/card/cardContentBG.jpg");
+  background-image: url("../../../../public/image/card/cardContentBG2.jpg");
 }
