--- a/src/main/webapp/src/components/skill/card/card.module.css
+++ b/src/main/webapp/src/components/skill/card/card.module.css
@@ -1,11 +1,23 @@
 @keyframes containerGrow {
-  from {
+  0% {
     transform: translateX(0px) rotateY(0deg);
   }
-  to {
+
+  20% {
     width: 330px;
     height: 466px;
-    transform: translateX(-280px) translateY(-155px) rotateY(540deg);
+    transform: translateX(-140px) translateY(-77.5px) rotateY(270deg) scaleX(1);
+  }
+  20.1% {
+    width: 330px;
+    height: 466px;
+    transform: translateX(-140px) translateY(-77.5px) rotateY(270deg) scaleX(-1);
+  }
+
+  100% {
+    width: 330px;
+    height: 466px;
+    transform: translateX(-280px) translateY(-155px) rotateY(540deg) scaleX(-1);
   }
 }
 
