스타일:기술스택, Card 클릭시 누적공부시간 표시(카드가 펼쳐지는 시간동안 텍스트가 사라졌다가 다시 나타나게함)

--- a/src/main/webapp/src/components/skill/card/card.module.css
+++ b/src/main/webapp/src/components/skill/card/card.module.css
@@ -41,7 +41,7 @@
   background-size: 150% 150%;
   background-position: 100%;
   transition: all 0.2s;
-  z-index: 50;
+  z-index: 30;
 }
 
 .overlayActive {
@@ -77,4 +77,9 @@
 
 .CardContentBG {
   background-image: url("../../../../public/image/card/cardContentBG2.jpg");
+}
+
+.hiddenClass {
+  transition: opacity 0.2s ease-in-out;
+  opacity: 0;
 }
