--- a/src/main/webapp/src/components/skill/card/card.module.css
+++ b/src/main/webapp/src/components/skill/card/card.module.css
@@ -43,6 +43,28 @@
     transform: translateX(-280px) translateY(-155px) rotateY(540deg) scaleX(-1);
   }
 }
+@keyframes containerGrowMedia {
+  0% {
+    transform: translateX(0px) rotateY(0deg);
+  }
+
+  20% {
+    width: 165px;
+    height: 233px;
+    transform: translateX(-70px) translateY(-38.75px) rotateY(270deg) scaleX(1);
+  }
+  20.1% {
+    width: 165px;
+    height: 233px;
+    transform: translateX(-70px) translateY(-38.75px) rotateY(270deg) scaleX(-1);
+  }
+
+  100% {
+    width: 165px;
+    height: 233px;
+    transform: translateX(-70px) translateY(-38.75px) rotateY(540deg) scaleX(-1);
+  }
+}
 
 .container {
   transition: all 0.2s;
@@ -71,6 +93,10 @@
   animation: containerGrow 0.5s forwards;
   position: absolute;
 }
+.overlayActiveMedia {
+  animation: containerGrowMedia 0.5s forwards;
+  position: absolute;
+}
 
 .card {
   position: absolute;
@@ -90,6 +116,10 @@
 
 .cardActive {
   animation: containerGrow 0.5s forwards;
+  position: absolute;
+}
+.cardActiveMedia {
+  animation: containerGrowMedia 0.5s forwards;
   position: absolute;
 }
 
